--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,12 +31,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.gson-2.3.jar=lib/gson-2.3.jar
+file.reference.ojdbc7.jar=lib\\ojdbc7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.3.jar}:\
     ${libs.eclipselink.classpath}:\
-    ${libs.JAVADB_DRIVER_LABEL.classpath}
+    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
+    ${file.reference.ojdbc7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
